# ChangeLog for app-editors/nedit
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/nedit/ChangeLog,v 1.74 2013/07/04 12:26:23 ago Exp $

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> nedit-5.5_p20110116-r2.ebuild:
  Stable for x86, wrt bug #474482

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> nedit-5.5_p20110116-r2.ebuild:
  Stable for sparc, wrt bug #474482

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> nedit-5.5_p20110116-r2.ebuild:
  Stable for alpha, wrt bug #474482

  25 Jun 2013; Chema Alonso <nimiux@gentoo.org> nedit-5.5_p20110116-r2.ebuild:
  Stable for amd64 wrt bug #474482

  24 Jun 2013; Agostino Sarubbo <ago@gentoo.org> nedit-5.5_p20110116-r2.ebuild:
  Stable for ppc, wrt bug #474482

*nedit-5.5_p20110116-r2 (23 Jun 2013)

  23 Jun 2013; Sergey Popov <pinkbyte@gentoo.org> -nedit-5.5_p20110116.ebuild,
  +nedit-5.5_p20110116-r2.ebuild:
  Revision bump: EAPI 5, epatch_user, correct dependencies. Drop old

*nedit-5.5_p20110116-r1 (15 May 2013)

  15 May 2013; Michael Weber <xmw@gentoo.org> +files/nedit.svg,
  +nedit-5.5_p20110116-r1.ebuild:
  Add desktop file and iocon (thanks johnny99, bug 296942). Respect AR (bug
  468172)

  24 Oct 2012; Ulrich Müller <ulm@gentoo.org> nedit-5.5-r1.ebuild,
  nedit-5.5_p20110116.ebuild:
  Update dependency after package move from x11-libs/openmotif to
  x11-libs/motif.

  10 May 2012; Agostino Sarubbo <ago@gentoo.org> -nedit-5.5_p20090914.ebuild:
  Remove old

  12 Apr 2011; Ulrich Mueller <ulm@gentoo.org> nedit-5.5-r1.ebuild,
  nedit-5.5_p20090914.ebuild, nedit-5.5_p20110116.ebuild:
  Remove useless aspell dependency. NEdit uses ispell, not aspell.

  21 Feb 2011; Jeremy Olexa <darkside@gentoo.org>
  nedit-5.5_p20110116.ebuild:
  Fixes for macos, bug 352991 by Johan Hattne

*nedit-5.5_p20110116 (16 Jan 2011)

  16 Jan 2011; Justin Lecher <jlec@gentoo.org> +nedit-5.5_p20110116.ebuild,
  +files/nedit-5.5_p20110116-40_Pointer_to_Integer.patch: