@@ -1,33 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-AUX nedit-5.5-argbvisuals.patch 1462 SHA256 ddf22535a85293e3be1453160305f926a1d9233a76febcb1380a2228ec82e1fe SHA512 011af666c65e59b8a234f90be5e8d8b2d102f8d1b59aaf2cab201be7ec5a8e079cbb0da07b72d3004b813de5df41dac3229327987b0c10849ddde38d36ec787d WHIRLPOOL ff9560d15b2407698994c0dc08f40e8f83514c15075ef7471c9637e6bd403f01cea565ded230bf89c9fd9e241ce0085a4401234c66c42d8ab2fba5fb4c6cac38
-AUX nedit-5.5-motif23.patch 526 SHA256 29e7bbbc4828422344790eb8663d9b872bc9deb6bb5966c8ee54e81f29c018eb SHA512 dc18a133f5b411c74e07d185bada64b6a66dda1667458087964b5b41af3e2bca4dfdbeea657f2ca465698243834e866ee1d03ed8d61c3c090cec89d7ea3c129b WHIRLPOOL 651bd3b35381958c75235fc95be9a04d3396339fadb99081794f593fa38e36ba450f5f656aecb8e571c17ed061472e7723e291a12e0e313ecb3a7350f44557f9
-AUX nedit-5.5-off-by-one.patch 568 SHA256 d79c41129d549dde88cd35dd37c1f17e95d0f9c4fab515babe6883a8c24a4687 SHA512 d4c7fe597b28c32da739c7afd0148b4cd97928884acd70c86001263728ecaffb6a019acfe35bd144d87e780c5189028567afe33b0ae13b62c68998f14e86b68a WHIRLPOOL 3eefdc0f195d1569898b39f1449a9a73ab5ae82c0cebeae90662b4ff37ceccd47bcb7cec774b9ae7b20d029fdb68de8b4cb231af115210eef2bc2dd642f5a9dd
 AUX nedit-5.5_p20090914-ldflags.patch 800 SHA256 9b796c337d5f98adb2ca0216f675ac06006022e6402bf065dbbf4d76660c6843 SHA512 ebe6add4f5b73ffc33fe65ddbb085373109e150c8f246610de1bb3273042451959bde4a5ec675261f4da1c9853256314c0e78c972bc0c61e206d523b92adf29e WHIRLPOOL 5bd961aa6bd066733e8e623781680c6d7a5f0140be075b6bb2cfa2a138e538e59ccb49c1985f0d02ffa2d255b2d9132c1f3fcc4f9191c332c4f21b1329e5b7a8
 AUX nedit-5.5_p20110116-40_Pointer_to_Integer.patch 10379 SHA256 3e78b6a2cff1b04e9b25a8ee3a328b37cdb342ee65169941f1c5c4c9ebe0326b SHA512 263fd5109c5fc16ea8328ad7855b8ab74e6e744d89374d68bc7db495a3295888f3599d2e9d6653097b4f7b68bae968a5deb7240a565f8fa1beba451b8b1f1b55 WHIRLPOOL c56aad4249ec31f2a1439f63a95ca78e53201d3835d8ab0e69c4f4ba68365f5c0555228baa5b9397a8e7b01c05f91cfacdf4e0df29c6ad8a5d98d945198d07b9
 AUX nedit.svg 1965 SHA256 25db8b89c2d3d3b93eed408f87c9f17e12ba96a0e5451df4d9ded781827276f8 SHA512 aa24195f7b85675f1aec85fec728ed4651a495289fea782248af962a5be68ad356b4fbcde107c3a8a74d348a5d7cc75790721234bb536d84c6e134ce4a7b00e1 WHIRLPOOL 552c5b7ccf8f89e1e2722d58a6c876606dab8be1e390169f7179ac88104b78d7aec287de88fc1410c9882fc1443a092791a2b2f160de326c58292c8b487cf229
-DIST nedit-5.5-src.tar.bz2 1124825 SHA256 0f6ae7205753080e8b047fb45759a7d6036b19396045c0b5c4a979441231966b SHA512 a1b409024851c2332c0992b5bfb8606c875795f1907a977b245cb2b081a45b53e606f615e413cfa8c34af2df782504e55351ce1a7545b7265958db06038d0858 WHIRLPOOL c14d48089d5dfa53f6edc21b0e57a83303f4d195322cd18ce6590d7a3e272bcb9147743554dada9c6dc87fd440568400c290003b9a3627b0268e54236d8b028c
 DIST nedit-5.5_p20110116.tar.bz2 1030011 SHA256 a69d765d933829b6d0447516aef6a1157b52c1b7dc99cd5713b10632b6294bd8 SHA512 ab635c9037c1599009684a1f40779f688c8e16a8b1294ffe88ff8d2466411beefa7e6324edd59b18fe4764fe6b66e83aa277cf87d4fcea5f4b223d951fc603e2 WHIRLPOOL 31b95fa483110a48a66c946142e5e924209a5c4b1a2a17ecc54844be26edbe3c0118595c546d570cdaed35c9aba7f5faeb247efb39f2f161a9dd115ad0b37faa
-EBUILD nedit-5.5-r1.ebuild 1299 SHA256 b1a791b237587d26ee9074e067fa9472a7611900fca47adc4876a3c359641882 SHA512 a7b0c0b8e52bd56e278543f5c5fb7cb356ae1dbe88e2ecac0db2b21e44e231e0a35c006913ebf19f711246dd705d420250cb7400099e51ee070cc5c80f7afb77 WHIRLPOOL 94f60b6f3bd07461a6fbf5126747d84a95c706296dac558cab8ffa261c87beb30c4091ea54690d2d8ec6c6391b885c093aa9518e1141e009baa09d713b3e9102
-EBUILD nedit-5.5_p20110116-r1.ebuild 2002 SHA256 c5c2fc69f0d3dbb780c79234c6614abfca0cb2498c9a7918d19fa8c137402a26 SHA512 fdcca4770e413e64a4738bae463b3c93166e87602aebd7e574c9552267c59e81eaff66bb7db3485c76ad47342ee4f840bbaadf7b2e07569549ca3e1af35542eb WHIRLPOOL 5018325aa76cddab7400d48e8cc966add1eb1175c9be0542af2479a03602d79d00aca50bdb60914694e5fd4be3b827f5ebd64b8149f6a9f0e533a3df325152cc
 EBUILD nedit-5.5_p20110116-r2.ebuild 1982 SHA256 885327fe82296bb24373b2a3e9a79c6bd1b2e8ac518b956b11599a76ba16d46f SHA512 12a517988f3641369411121ee3406f9f860d263947903104376c391788d4671fb7e9e8fe8e92dbfb5ed3a72a8d8b25fa2c5c4497856b97b2bb0c424ebe6d0efc WHIRLPOOL c8b9dc45f3d2a242eff2b49266c2f46ecd1bba9e42b1e5a723f35c6cb39e0ccaa0ef71623cb5e43f5337d4af36dcf79236fa9082264013017cbc7a51f642857b
-MISC ChangeLog 10442 SHA256 fccc4194e35dbb71cc91ecf5e6a1fd85c2e774db614da64d6c65ca25f338c65a SHA512 b0e8cae86001e78e5c8ad90e910ba8249b4f8f4bfd7b8a32ffd6671b8a7704c6e9ea4841b617af2445cfd80cc1a38ad262655e3218bb57a1ad03f1ad583e1af8 WHIRLPOOL a1192aa6dda98408325163cab5c846927e51e97460497f112d9b8095a3efd72c52a67e54ab8c94e095ff96a0d7f07e8ea68765569269c72499d308fd65ca3c90
+MISC ChangeLog 10683 SHA256 bcb4ddcd271146b3485910d72272633e644e4967e42fd3eed5036e0418a64836 SHA512 b062a3b812cbae6f9b7804e34e99fe4f3319bc8ee84c30fb79651323f87e3e8375c186f3838e941416a2781b49130da44b70868e2b733099d9e9092459012d82 WHIRLPOOL b63ba8814c6b35890b3c82294458c4b20700200b1f63b21bd51bfff742412cca719a5e23d74ac449d5a0c1ce9a5c4c6d64dc9ecebd23d94c6e8bd738e6e656f6
 MISC metadata.xml 210 SHA256 90082fe26a119a63ca8fbe227f66c33ba74167b6cf28e2cef02dea6c4f656c39 SHA512 4554adeece55ce9adfdadba04443a3ede6ff910b96a11b77bb1f07ddd6bdbc756b8e6e1873660f8f54e67f46db1065980794a6136c6de7883b24d0ee13ff51fe WHIRLPOOL f546bd1233d5a9934ba0480881ceba944cb8ff1869c12ed2421d4ccbb247ee38dc0c7c8b979f10533ad0fc603b5e4829d0ddf174a83d0bda8e8dd62c1c873eeb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJR1WnwAAoJELp701BxlEWfgS0P/jwFtri27pIE8lSXZxuvWQfC
-6cpJYQXKOcPua6mnw7UEGZv4pHrwV3GLbedo5RfRDeBSDrPVEkBQLpfTYEtvuxL3
-ONFBBRBZ4lyHmZ6SIoITXPSqTUJH8MlVbPHX5a/6Wu2UNgZFHv5tEog55J60Erj/
-ZiQ31ZMVX+BliJObGBp1nJiapVWolqZsV0YuFBZs8a9w7/aPPujDILtdwob0EXYz
-BtXimjzzeEWv7SktKPulMR6LJHQ6rLvgIq3g+KnvLT7qImvEPSY4FnbJrBwpfNsp
-tLSME5i25lF0uzOPnRpQKQcMRbSDmGpjbz/QaurD7clAoTKffODJTxSHPD/ZqDKe
-4JwEgh9gpdzmJbFnH0wFV9+fYJcA+w+M210RjR6ratl/xZJafzHhOwv0EgLSfBOo
-z7U1LaqXn/r3BeCGPGMQnLmBPCspfppgtBszmbg3G9gYlCAtZ4UlCUEKS7J2XcUw
-IYRrUsz2Ih90cEcK81g0VgE5I5qTJZvZ8lTHVkEdi57o4hBpsgE4Dd1sZzKcBRYV
-BE2//IEBf9c8bbpZuVyP4grKbyflofD12+M6Tv23cVWYYFtaGuQ/TxdXLb0Eg3tY
-1SGib5s+ZRxx/W8YTpkhXHKeX6VhPRcj9AUOZDn8KSIB7LR6Ek5QQPZSQeFybbAD
-MN8LasTwEYfO4yXkA09a
-=EZqG
+iQEcBAEBCAAGBQJR1YuDAAoJEMbwO6tnXQ0sS8gIAL5UGROSVX4l9v6TYZVi/hYI
+5BhtqLVgWvevw38Dk3Be/G3W7I4tGJU4ozkZnhKMDGURcJNyaMEdCZ2SSoMgzOe4
+JF7xjFm7j9n7rdm4SnSTRBfFrBC0maKM1xqB9ERbWNCV/aaNeEXb5gJnCxoxydyS
+AeOHQ2X3UVE4+iR/KHPdjzTlKJQUOLTecTkDm+2Bv1WK6pfv7Iq0J007XdzSVXjS
+QMqIObXTi6ReIZ4dqBBmXuQohuxyJNk3jQZNz+zX2JWGIA7H/QXHkDMS9J1IyJL7
+XXCKuZCaOganwUEZ5ABDxJXjwh25mPmnE4KdmQPNOAx8AaISbC0VM2uFeLyMLFk=
+=QeGz
 -----END PGP SIGNATURE-----
