@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST Net-Server-0.97.tar.gz 92158 SHA256 4ebce7e92b8fcfcc127583b1dee49d40726860c080908ea381e619c047d8708f SHA512 855eed9ca1acab0684006a5b9efd46b55579462c9c8162d04379168a8b55758ca7716403a2284f8b8534c4f710c3f30d4b48e303ccd2490a848debe0c63c1396 WHIRLPOOL aa0c057b7817ce11be8e3b7827e8b4390cc6dc00b9f0b7ffbec2a62dd479336bfd4dd3f9d56ad2633ab6117cdecf3ff0a9ea0194589cb5c880828d3dff1ecc14
 DIST Net-Server-0.99.tar.gz 101559 SHA256 c11ab02942e1848fbcbdc321c1e5667f4fa3e55eb0723e7ecb9d5d3ab713ae5d SHA512 e9d233657a116cab054f269f73e0c341d265871238076850d43e1fbeb9a99e5abedf09a1c5f95834ef14de834c993f772820a380083c8a28b174360b4b8056fe WHIRLPOOL a5577152fbc87895da7393f255c863318c98f03f07be0d756485e018fcf9ec2e1745a188d0bd804f2b9a0346d788de3ef831440565f7f07a029a6e2bb714fc94
 DIST Net-Server-2.006.tar.gz 132015 SHA256 730f1a29c084c4791a9f4f9e2c6375efe14dbcb2bccd4a0f170e401ffa238a0d SHA512 f4bcdd95b4c2fc6fe273618cef731ace0f5b20da2775d55f93c7ec5657f0852aa498b5f326211ebf1a783e1382c33cbbf608c7411ad514f5aa4c7c8c1cc6d982 WHIRLPOOL 2bf1806300feeba334e2384d2cefe842d120b7d78f60f00267f0530337805cb902d944ec4c40ac45950a09fafb144ce8e3fb4eeed0e853dfea303d48a426d564
@@ -5,6 +8,23 @@ DIST Net-Server-2.007.tar.gz 133765 SHA256 1c6fd3145b1bb796e28ebf74c181e4a7bbf5c
 EBUILD net-server-0.97.ebuild 653 SHA256 d75ae839615323b804bc98c94d1f02f2467cddc6b82a1d064c2b6e7d97f2a3a9 SHA512 4ec2b2e3f214f3846200b65be00ef1fcacb67296422b7ca1261c5f0d96d47fb95a9f5f88ad8ba112a69893b57464a4175a4f7c4dae48422b0f4cb150aba462ad WHIRLPOOL f1cc3c3279f9a76c56e39d8275f45be9cbd9383b7fcc0a9c50ec0ab4c2f63961235ce87e06594d10ad820fdfce444f44004a8c722587fcd9192f4f5858b7d11e
 EBUILD net-server-0.990.0.ebuild 535 SHA256 6204524aa21f5e37bfaff2133653c5234a1988507f81db95bf0cd9d40fbe44f0 SHA512 e3c8983c95bd908a1ab9bbaac995990b381ace1adee489362334c670830ed8e6fd0957dd54ea698fd8def6caff442b18026938818689c60fd7f1556d9ed3a1f0 WHIRLPOOL deaa68ea58c5000735abb1d4035c2c9f0112de964cea18ebe36cacf2e17afa9cf40f60adcef615d38bf82668fbc393d3a90c17769836420826ed63a7b8502042
 EBUILD net-server-2.6.0.ebuild 580 SHA256 339dbfcff3f5f70a264da6b5ecc9810e3fed34f1d063bcb34d7f5332e61d7cb1 SHA512 edf818bd03d1cd1a8ca21bdc7a08eedb9885828207dd2fe7cddd08633c9bbc38619d5b88b8d766dd33020babe2647a11c5f2118b7df37a807b5ce3db1d611055 WHIRLPOOL abfaf733d3595ea480ac3a53a3c9f1a48e9a3fd0cdcfdc9beafc59f6641fcc78c6d66d7d8df285f25e0d78207edf36778cb6ae1279280bab51be5c7a4f2e203a
-EBUILD net-server-2.7.0.ebuild 582 SHA256 77938cd28e9e5ce48ef06c5c80c9b7aa62f5538b1045d332f5222d395f756e93 SHA512 eaa6e7de160cdd3163f1d5775a076571b9588f1f24658953a2dae491c5a39fe5918a24de025b6c216ccf13898fad997c429940f9fe97de09ea5b5d59cf85c8f2 WHIRLPOOL 0ac7b177f53fe20bdf7ae13e4bdde48d39a4d1eda492169badc3bfd35239ffb69c0aecf36e9b876d54a1d48905b93b2b24f0a5b906dcdc0b1af64544e421cf25
-MISC ChangeLog 9041 SHA256 a2e3ff9abe4ab392ac7987882776e7bc308bbf797f54799799685c39669242a2 SHA512 f07e9c802eec949577b96cb261079e92fa3139228aff951483532c0a71eb997144401484ba1232414da415eac872a508918acf2ed26e0898072256b313cf4375 WHIRLPOOL 482e27eb4f7c12d2c193d98dab5d1b49cd22092cd7415411d1df16aa312f0c8223569bbb4b266877bab0c034284f543f069c105a49909413c66ec19c58815b27
+EBUILD net-server-2.7.0.ebuild 578 SHA256 d9619586736329312f5df5f1bb6582a1762757fc6bafdc33a1ec8c82eb4a0895 SHA512 286e0f6bf0fe13409707826541e8797bfcec054af217a729fea6e324b0a7f51a4cfb389c77a11538c04501dd42b8104a695cd99f25d0261ce9073cd778c08375 WHIRLPOOL 88dbb47d20cb7e5531624c1a0f99ff269039ce90e6846f990db88ec5b0f3ea4b013a73cc74ece5d2a919571c785f004be1a89d67b0d9fbb653e7b5d5ffb09854
+MISC ChangeLog 9259 SHA256 0848425e99368e5c4de20ddd4d6792bc43bb9e1b6b49bbfac847fe3433233944 SHA512 0c99c59a78d72c9350ff42ae092e0dcf1f63051de3e4de7204774cc0417ac5b5f0c0a67cd4ee58037ee553de4dd8932d11ef17d8c7a1f338e32a26bf311fab2f WHIRLPOOL c67e42cf080ee5d0786001543ec85c5f2a83ae52846cd1d1d4931873c3d4c84f071aeb51caa3069872cb1889244c624364a9eb0bad823798528daf3140eece18
 MISC metadata.xml 1891 SHA256 74beb73ad7a476a76b6c2247afb6b4f300e4cd6657088eb86a05accf0e17c031 SHA512 498e0ed634b3b2455a089bb36c0cdb7d86dbe6b71b47ab16db0995978cdaca78494677ba8dff42028fbd8e3b14584e003862cff994c09294d226bfb0afb94926 WHIRLPOOL b4ccc78b0a97beff065f4c99f6ecb7d3702264f2cce603c1e0015ee9719aae7703cd2a1b4519fb05878530896fdc5aa8ac49a10ec866e481add214feada83432
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iQIcBAEBCgAGBQJR1qhSAAoJELp701BxlEWfP4YQAIxVkAuFKVj3DThDCacWMqc0
+15QZiyLr8oZTLqHt070rgfMmyY46iSLocvrEj19OdtpuM5JKg7QqBYU8YiYz3E88
+msKcKwJhJXjZEoalaQlF8Zgia0+NQ4Zc1sTjmfL44/jF+SQQ+eoJyx1X0TCbQh1k
+iZHF6jet376u9NEgfw1q44VLA5aZ+pRRAjidD38K0TKvdwQcH0t86nNsXAuXBEy0
+GlMvXJzLJ6Ha2WmQ6hzxziRSl6i+A1bwyGbuFZDWoglWlRNCoRDL89odOvcx3wCb
+AMbkLqyRmduVLS4pF6I/T1D5TowYwo2nEuI/VMQa6o5C8J1bvdYxtxJtFvNUFark
++Qo3kB0jrB0Y5WwKkkGlOSiDCuShjpmODdLgZoNIIDlcor8QIKBOyxKkk5IZPqeA
+E6dgggZir8LMP4pKoRN5hEtTKNuGKoMrOpWXySWhZnNHL8/JkSSIcspficuEcB6e
+tpc3H5Nkgc2+49Df/rMHtOLV8C0w0xYf66TRUx/62MgpmJY5PFLNU9e3PDWlbtak
+mMX6lqCFuDO4rp1ppKc2SfNvxLoMIctU6FKG2pvTmMDk3AU74zeivk3yuuNPrLq0
+40EozupCzVsopJ9FJSS65OYwTXSdqJtA8aIVzW5Bcqc/jxjjmx+3/Mp0vtsFrv7e
+Rhgs6gZQCGRn1gOfxJRl
+=B9Su
+-----END PGP SIGNATURE-----
