@@ -1,6 +1,12 @@
 # ChangeLog for app-editors/nedit
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/nedit/ChangeLog,v 1.74 2013/07/04 12:26:23 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/nedit/ChangeLog,v 1.75 2013/07/04 14:51:23 kensington Exp $
+
+  04 Jul 2013; Michael Palimaka <kensington@gentoo.org>
+  -files/nedit-5.5-argbvisuals.patch, -files/nedit-5.5-motif23.patch,
+  -files/nedit-5.5-off-by-one.patch, -nedit-5.5-r1.ebuild,
+  -nedit-5.5_p20110116-r1.ebuild:
+  Remove old.
 
   04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> nedit-5.5_p20110116-r2.ebuild:
   Stable for x86, wrt bug #474482
